Bug 497522 - When user tries to auth using another account in the polkit, the system accepts only current user password
Summary: When user tries to auth using another account in the polkit, the system accep...
Status: RESOLVED FIXED
Alias: None
Product: policykit-kde-agent-1
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.2.4
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-15 21:49 UTC by vitekflexow
Modified: 2025-01-18 11:33 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vitekflexow 2024-12-15 21:49:20 UTC
SUMMARY
When user tries to auth using another account in the polkit, the system accepts only current user password

STEPS TO REPRODUCE
1. Open any app which requires admin's rights
2. Swith the user in the polkit window
3. Try to enter a password of the another user

OBSERVED RESULT
Polkit accepts only password of current user

EXPECTED RESULT
Polkit accepts the password of swithched user

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8
Qt Version:  6.8.1

ADDITIONAL INFORMATION
I would be pleasure if You fix this bug as soon as possible
Comment 1 Bug Janitor Service 2025-01-14 14:12:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/polkit-kde-agent-1/-/merge_requests/46
Comment 2 Harald Sitter 2025-01-15 10:02:46 UTC
Git commit 401c76d0a03cf5e0beb801960d5491cf06e1d5fb by Harald Sitter.
Committed on 14/01/2025 at 14:11.
Pushed by sitter into branch 'master'.

propagate selected user changes from qml to cpp

this got lost in the qtquick port. simply restore the previous behavior
of calling PolicyKitListener::userSelected when the user changes

M  +1    -0    QuickAuthDialog.cpp
M  +1    -0    QuickAuthDialog.h
M  +3    -2    policykitlistener.cpp
M  +1    -1    policykitlistener.h
M  +3    -0    qml/QuickAuthDialog.qml

https://invent.kde.org/plasma/polkit-kde-agent-1/-/commit/401c76d0a03cf5e0beb801960d5491cf06e1d5fb
Comment 3 Harald Sitter 2025-01-15 10:04:05 UTC
Git commit fdaa09b6b8bb8670653598f962a2969c0cc51aed by Harald Sitter.
Committed on 15/01/2025 at 10:03.
Pushed by sitter into branch 'Plasma/6.3'.

propagate selected user changes from qml to cpp

this got lost in the qtquick port. simply restore the previous behavior
of calling PolicyKitListener::userSelected when the user changes


(cherry picked from commit 401c76d0a03cf5e0beb801960d5491cf06e1d5fb)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +1    -0    QuickAuthDialog.cpp
M  +1    -0    QuickAuthDialog.h
M  +3    -2    policykitlistener.cpp
M  +1    -1    policykitlistener.h
M  +3    -0    qml/QuickAuthDialog.qml

https://invent.kde.org/plasma/polkit-kde-agent-1/-/commit/fdaa09b6b8bb8670653598f962a2969c0cc51aed