propagate selected user changes from qml to cpp

this got lost in the qtquick port. simply restore the previous behavior
of calling PolicyKitListener::userSelected when the user changes

BUG: 497522